--- a/frontend/.github/workflows/frontend-docker.yml
+++ b/frontend/.github/workflows/frontend-docker.yml
@@ -2,22 +2,26 @@ name: CI/CD - React Frontend with Docker
 
 on:
   push:
-    branches: [ "master" ]   # run pipeline when code pushed to main
+    branches: [ "master" ]   # Runs pipeline when code is pushed to master branch
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
 
     steps:
+      # Step 1: Checkout repository
       - name: Checkout repo
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
 
+      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # Step 3: Log in to GitHub Container Registry (GHCR)
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -25,10 +29,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # Step 4: Build and Push Docker image
       - name: Build & Push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: ./frontend  # 👈 path to frontend code
+          context: ./frontend   # 👈 folder where your React frontend code is
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/frontend:latest
