--- a/frontend/.github/workflows/frontend-docker.yml
+++ b/frontend/.github/workflows/frontend-docker.yml
@@ -2,7 +2,7 @@ name: CI/CD - React Frontend with Docker
 
 on:
   push:
-    branches: [ "master" ]   # Runs pipeline when code is pushed to master branch
+    branches: [ "master" ]   # change to "main" if your repo uses main
 
 jobs:
   build-and-push:
@@ -13,15 +13,12 @@ jobs:
       packages: write
 
     steps:
-      # Step 1: Checkout repository
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 3: Log in to GitHub Container Registry (GHCR)
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -29,11 +26,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step 4: Build and Push Docker image
       - name: Build & Push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: ./frontend   # 👈 folder where your React frontend code is
+          context: ./frontend
+          file: ./frontend/Dockerfile   # 👈 important fix
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/frontend:latest
